--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- STYLESHEETS -->
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:300,400,600,800'>
-  <link rel="stylesheet" href="../dist/vertebrae.css">
+  <link rel="stylesheet" href="dist/vertebrae.css">
 </head>
 <body>
 
